# El-juego-de-la-vida-de-Conway---GPU

./: README.org  cpu_serial.cpp  gmon.out  opencl_mod1.cpp  opencl_mod2.cpp  opencl_simple.cpp  simpleLifeKernel.cl
cpu_serial/: CMakeLists.txt
cpu_serial/assets/gpu/opencl/: simpleLifeKernel.cl
cpu_serial/include/GameOfLife/: gpu_cuda.hpp  grid.hpp
cpu_serial/src/: #malla.cpp#  CMakeLists.txt  cpu_serial.cpp  grid.cpp
gpu_cuda/: CMakeLists.txt  gmon.out
gpu_cuda/assets/gpu/opencl/: gmon.out
gpu_cuda/include/CudaGameOfLife/: grid.hpp
gpu_cuda/include/GameOfLife/: cpu_serial.hpp  err_code.h  gpu_opencl.hpp  util.hpp
gpu_cuda/src/: CMakeLists.txt  gpu_cuda.cu  gpu_cuda_mod1.cu  gpu_cuda_mod2.cu  gpu_cuda_test.cu  gpu_simple.cu  grid.cpp  main.cpp  test.cpp
gpu_cuda/src/CudaGameOfLife/: gpu_simple.cu
gpu_cuda/tests/: matrix_not_ok.txt  testGrid.cpp
gpu_opencl/: CMakeLists.txt
gpu_opencl/src/: CMakeLists.txt  opencl_mod1.cpp  opencl_mod2.cpp  opencl_simple.cpp  simpleLifeKernel.cl
grid/: CMakeLists.txt
grid/assets/gpu/opencl/: mod1LifeKernel.cl
grid/src/: CMakeLists.txt  gpu_cuda_mod2.cu  malla.cpp
solucion_gpu/: CMakeLists.txt  README.org  main.cpp
solucion_gpu/include/GameOfLife/: #cpu_serial.cpp#  .#cpu_serial.cpp  cpu_serial.cpp  cpu_serial.hpp  gpu_cuda.hpp  grid.hpp  open_cl.hpp
solucion_gpu/src/: CMakeLists.txt  cpu_serial.cpp  gpu_opencl.cpp  grid.cpp  main_cpu_serial.cpp  main_opencl.cpp  opencl.cpp
solucion_gpu/tests/: CMakeLists.txt  testGrid.cpp
solucion_gpu_opencl/include/GameOfLife/: grid.hpp
solucion_gpu_opencl/src/: grid.cpp
solucion_gpu_opencl/tests/: CMakeLists.txt  testGrid.cpp
